scrollbar fix

--- a/staticfiles/style/facility_detail.css
+++ b/staticfiles/style/facility_detail.css
@@ -1,20 +1,27 @@
-.fd-summary-container {
-    position: sticky;
-    min-height: 400px;
-    max-width: 260px;
-    height: 50%;
+.fd-summary {
+    position: fixed;
+    min-height: 500px;
+    width: 20%;
     z-index: 1;
-    top: 30%;
-    float: right;
+    top: 20%;
+    right: 0;
     background: #292826;
     color: white;
+}
+.fd-detail {
+    width: 73%;
+    float: left;
+}
+.fd-item-card {
+    max-width: 300px;
+    height: 100%;
 }
 .fd-summary-items {
     max-height: 300px;
     overflow-y: auto;
 }
 .fd-search {
-    top: 8%;
+    position: sticky;
 }
 .fd-offer-container {
     margin-top: 30px;
